# ThreadJect

./: CMakeLists.txt  CMakePresets.json  README.md
Manual Map Inject - Thread Hijacking/: CMakeLists.txt
Manual Map Inject - Thread Hijacking/Include/: ManualInject.h
Manual Map Inject - Thread Hijacking/src/: Main.cpp  ManualInject.cpp
